--- a/requirements.txt
+++ b/requirements.txt
@@ -39,14 +39,17 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.6.0
 mysql-connector-python==8.0.22
+numpy==1.19.5
 oauth2client==4.1.3
 oauthlib==3.1.0
+pandas==1.2.0
 parso==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
 pipenv==2020.11.15
 prompt-toolkit==3.0.9
 protobuf==3.14.0
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 ptyprocess==0.7.0
 pyasn1==0.4.8
@@ -55,6 +58,7 @@ Pygments==2.7.3
 pylint==2.6.0
 PyMySQL==0.10.1
 PySocks==1.7.1
+python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.5
 requests==2.25.1
